--- a/ProSoundEQ/src/main/res/drawable/eq_seekbar_progress.xml
+++ b/ProSoundEQ/src/main/res/drawable/eq_seekbar_progress.xml
@@ -1,23 +1,20 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Gray background -->
     <item android:id="@android:id/background">
-        <shape>
-            <corners android:radius="4dp"/>
-            <solid android:color="#444444"/>
+        <shape android:shape="rectangle">
+            <size android:width="4dp" />
+            <solid android:color="#444444" />
+            <corners android:radius="2dp" />
         </shape>
     </item>
-    <item android:id="@android:id/secondaryProgress">
-        <clip>
-            <shape>
-                <corners android:radius="4dp"/>
-                <solid android:color="#00ffee" />
-            </shape>
-        </clip>
-    </item>
+
+    <!-- Orange progress -->
     <item android:id="@android:id/progress">
         <clip>
-            <shape>
-                <corners android:radius="4dp"/>
-                <solid android:color="#00ffee" />
+            <shape android:shape="rectangle">
+                <size android:width="4dp" />
+                <solid android:color="#FFA500" /> <!-- Orange -->
+                <corners android:radius="2dp" />
             </shape>
         </clip>
     </item>
