--- a/ProSoundEQ/src/main/res/drawable/eq_seekbar_thumb.xml
+++ b/ProSoundEQ/src/main/res/drawable/eq_seekbar_thumb.xml
@@ -1,7 +1,9 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <size
-        android:width="18dp"
-        android:height="18dp"/>
-    <solid android:color="#00ffee"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <size android:width="18dp" android:height="18dp" />
+            <solid android:color="#DDDDDD" />
+            <stroke android:width="2dp" android:color="#AAAAAA" />
+        </shape>
+    </item>
+</selector>
